iterate through notes

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div>
+  <div *ngIf="notes">
+    <div *ngFor="let note of notes">
+      <p>{{ note.text }}</p>
+    </div>
+  </div>
+
+  <div *ngIf="!notes">
+    <p>Loading...</p>
+  </div>
+</div>
